# PortGateYard-Reproducibility

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  MANIFEST.csv  MANUSCRIPT_REPRODUCIBILITY_REVISIONS.md  README.md  REPRODUCE.md  REPRODUCIBILITY_STATUS.md  environment.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
audit/: rerun_comparison.csv
configs/: core.json  disturbance.json  fidelity.json  public_peak_fidelity.json  table10_reconstruction.json  table12_reconstruction.json
data/: README.md  SOURCES.csv
data/processed/: clean_port_houston_terminal_reports.csv  clean_port_virginia_weekly_metrics.csv  dwelling_activity_counts.csv  mendeley_capacity_benchmark_summary.csv  mendeley_tas_benchmark_summary.csv  public_data_calibrated_scenarios.csv  sc_ports_daily_gate_missions.csv  sc_ports_summary.csv
data/raw/: README.md  download_manifest.csv
paper/: PAPER_VERSION.md  main_snapshot.tex
results/e1/: old_vs_current.csv  raw_results.csv  summary_results.csv
results/e2/: model_fidelity_raw_results.csv  online_vs_pto_by_fidelity.csv  oracle_pto_action_search.csv
results/e3/: pto_vs_online_by_weight.csv  raw_results.csv  weight_sensitivity_summary.csv
scripts/: build_paper_tables.py  download_public_data.py  make_publication_figures.py  reproduce.py  run_aggregate_diagnostics.py  run_repair_experiments.py  run_validation_experiments.py  verify_archived_results.py  verify_e0_raw_replay.py
src/port_queue/: cli.py  (+12 more)
tests/: test_aggregate_diagnostics.py  test_config_and_policies.py  test_simulation.py
(+15 files in other folders)
